Fixed right hand column on small and x-small screens

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ p {
 	text-align: center;
 	border: none;
 }
+.header-text h1 {
+	margin-top: 45px;
+}
 .spacer-30 {
 	width: 100%;
 	height: 30px;
@@ -82,7 +85,10 @@ p {
 	background-size: cover;
 }
 .mobile-splash .container-fluid {
-	padding: 0;
+	background: linear-gradient(to top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 60%);
+	background: -moz- linear-gradient(to top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 60%);
+	background: -webkit- linear-gradient(to top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 60%);
+	background: -o- linear-gradient(to top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 60%);
 }
 .mobile-splash h2 {
 	font-family: 'Roboto', sans-serif;
@@ -93,10 +99,7 @@ p {
 	padding: 15px;
 	margin-top: 100px;
 	margin-bottom: 0;
-	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-	background: -moz- linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-	background: -webkit- linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-	background: -o- linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+	
 }
 
 .jumbo-splash {
@@ -114,10 +117,10 @@ p {
 	overflow: hidden;
 }
 .splash-background {
-	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-	background: -moz- linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-	background: -webkit- linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-	background: -o- linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+	background: linear-gradient(to top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 90%);
+	background: -moz- linear-gradient(to top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 90%);
+	background: -webkit- linear-gradient(to top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 90%);
+	background: -o- linear-gradient(to top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 90%);
 }
 .splash-text {
 	margin-top: 270px;
